# static-site-generator

static_site_generator/: .gitignore  CONTRIBUTING.rst  Makefile  README.rst  main.py  pyproject.toml  requirements_dev.txt  test.html  tox.ini
static_site_generator/.github/: ISSUE_TEMPLATE.md
static_site_generator/content/: index.html
static_site_generator/content/majesty/: index.html
static_site_generator/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
static_site_generator/src/: adapter.py  addapter.py  extracter.py  htmlnode.py  leafnode.py  main.py  page.py  parentnode.py  textnode.py
static_site_generator/src/static_site_generator/: __init__.py
static_site_generator/tests/: __init__.py  test_adapter.py  test_extracter.py  test_htmlnode.py  test_leafnode.py  test_parentnode.py  test_static_site_generator.py  test_textnode.py
static_site_generator/tests/inputs/: just_text.md  no_newline.md  sample_markdown.md  valid_markdown.md
