[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "static_site_generator"
version = "0.1.0"
description = "A simple static site generator - guided project with boot.dev"
readme = "README.rst"
authors = [
  {name = "Flarenzy", email = "none"}
]
maintainers = [
  {name = "Flarenzy", email = "none"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Flarenzy/static_site_generator/issues"
changelog = "https://github.com/Flarenzy/static_site_generator/blob/master/changelog.md"
homepage = "https://github.com/Flarenzy/static_site_generator"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

